维度与世界生成部分

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -35,4 +35,5 @@
  */
 dependencies {
     runtimeOnlyNonPublishable("com.github.GTNewHorizons:NotEnoughItems:2.5.4-GTNH:dev")
+    implementation files("libs/+MysteriumLib-1.5.10.jar")
 }
