--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,7 @@ modGroup = mods.tesseract.underworld
 useModGroupForPublishing = false
 
 # Updates your build.gradle and settings.gradle automatically whenever an update is available.
-autoUpdateBuildScript = false
+autoUpdateBuildScript = true
 
 # Version of Minecraft to target
 minecraftVersion = 1.7.10
