--- a/src/main/resources/META-INF/underworld_at.cfg
+++ b/src/main/resources/META-INF/underworld_at.cfg
@@ -2,3 +2,4 @@ public net.minecraft.world.chunk.Chunk field_76652_q # storageArrays
 public net.minecraft.client.gui.GuiIngame field_73839_d # mc
 public net.minecraft.client.renderer.EntityRenderer *
 public net.minecraft.client.renderer.EntityRenderer *()
+public net.minecraft.world.gen.feature.WorldGenMinable *
