--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -35,5 +35,6 @@
  */
 dependencies {
     runtimeOnlyNonPublishable("com.github.GTNewHorizons:NotEnoughItems:2.5.4-GTNH:dev")
-    implementation name: "+Mycelium-1.5.10-dev"
+    //implementation name: '+Mycelium-2.1.1-dev'
+    implementation files("libs/+Mycelium-2.1.1-dev.jar")
 }
