--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ modId = underworld
 
 # Root package of the mod, used to find various classes in other properties,
 # mcmod.info substitution, enabling assertions in run tasks, etc.
-modGroup = mods.tesseract.underworld
+modGroup = cn.tesseract.underworld
 
 # Whether to use modGroup as the maven publishing group.
 # Due to a history of using JitPack, the default is com.github.GTNewHorizons for all mods.
