--- a/src/main/resources/META-INF/underworld_at.cfg
+++ b/src/main/resources/META-INF/underworld_at.cfg
@@ -1,5 +1,6 @@
 public net.minecraft.world.chunk.Chunk field_76652_q # storageArrays
 public net.minecraft.client.gui.GuiIngame field_73839_d # mc
+public net.minecraft.entity.Entity field_71087_bX # inPortal
 public net.minecraft.client.renderer.EntityRenderer *
 public net.minecraft.client.renderer.EntityRenderer *()
 public net.minecraft.world.gen.feature.WorldGenMinable *
